# Music_Player

./: CMakeLists.txt
src/: MusicPlayer.cpp  MusicPlayer.h  Node.h  NonGUIMusicPlayer.cpp  NonGUIMusicPlayer.h  main.cpp  musicplayer.ui
